@@ -249,7 +249,10 @@ const size_t TAO_DEFAULT_VALUE_FACTORY_TABLE_SIZE = 128;
 #endif
 
 #if !defined (TAO_HAS_ZIOP)
-# define TAO_HAS_ZIOP 1
+# if (TAO_HAS_CORBA_MESSAGING == 1)
+// ZIOP needs corba messaging to work
+#  define TAO_HAS_ZIOP 1
+# endif
 #endif
 
 // Avoid namespace pollution that's common on older UNIXes...
